--- a/zhow/how2/how2.html
+++ b/zhow/how2/how2.html
@@ -26,8 +26,8 @@
                 Jangan menggunakan wadah makanan dengan bahan yang sekali pakai atau sulit untuk terurai ketika selesai menggunakannya.
               </p>
               <a href="https://kumparan.com/tips-dan-trik/4-cara-mengurangi-sampah-plastik-di-sekolah-untuk-menjaga-lingkungan-21EO7RwyZYh/4" target="_blank"><button class="action-btn">Learn More</button></a>
-              <a type="text/html" href="/index.html"><button class="action-btn">Home</button></a>
-              <a type="text/html" href="/zhow/how.html"><button class="action-btn">Previous</button></a>
+              <a href="index.html"><button class="action-btn">Home</button></a>
+              <a href="https://stepennnsss.github.io/Reduce-Plastic-Waste/zhow/how.html"><button class="action-btn">Previous</button></a>
               <a type="text/html" href="/zhow/how3/how3.html"><button class="action-btn">Next</button></a>
             </div>
     
