--- a/zhow/how3/how3.html
+++ b/zhow/how3/how3.html
@@ -27,8 +27,8 @@
               </p>
               <a href="https://konveksitasjakarta.oscas.co.id/tas-belanja-ramah-lingkungan/" target="_blank"><button class="action-btn">Learn More</button></a>
               <a type="text/html" href="/index.html"><button class="action-btn">Home</button></a>
-              <a type="text/html" href="/zhow/how2/how2.html"><button class="action-btn">Previous</button></a>
-              <a type="text/html" href="how4/how4.html"><button class="action-btn">Next</button></a>
+              <a type="text/html" href="how2/how2.html"><button class="action-btn">Previous</button></a>
+              <a type="text/html" href="zhow/how4/how4.html"><button class="action-btn">Next</button></a>
             </div>
     
             <div class="right-grid">
