--- a/zhow/how.html
+++ b/zhow/how.html
@@ -27,7 +27,7 @@
                 menjadi salah satu jenis sampah yang ikut berkontribusi banyak dalam mencemari lingkungan.
               </p>
               <a href="https://waste4change.com/blog/rekomendasi-tumbler-minuman-pengganti-botol-plastik/" target="_blank"><button class="action-btn">Learn More</button></a>
-              <a href="index.html"><button class="action-btn">Home</button></a>
+              <a type="html" href="index.html"><button class="action-btn">Home</button></a>
               <a type="text/html" href="how2/how2.html"><button class="action-btn">Next</button></a>
             </div>
     
