--- a/zhow/how3/how3.html
+++ b/zhow/how3/how3.html
@@ -26,9 +26,9 @@
                 baik kita menggunakan tas belanja yang lebih ramah lingkungan untuk mengurangi sampah plastik.
               </p>
               <a href="https://konveksitasjakarta.oscas.co.id/tas-belanja-ramah-lingkungan/" target="_blank"><button class="action-btn">Learn More</button></a>
-              <a type="text/html" href="/index.html"><button class="action-btn">Home</button></a>
-              <a type="text/html" href="how2/how2.html"><button class="action-btn">Previous</button></a>
-              <a type="text/html" href="zhow/how4/how4.html"><button class="action-btn">Next</button></a>
+              <a type="text/html" href="https://stepennnsss.github.io/Reduce-Plastic-Waste/"><button class="action-btn">Home</button></a>
+              <a type="text/html" href="https://stepennnsss.github.io/Reduce-Plastic-Waste/zhow/how2/how2.html"><button class="action-btn">Previous</button></a>
+              <a type="text/html" href="https://stepennnsss.github.io/Reduce-Plastic-Waste/zhow/how4/how4.html"><button class="action-btn">Next</button></a>
             </div>
     
             <div class="right-grid">
